SERVER-21344 Make size field in a CachedBSONObj instance endian-safe